--- a/assets/html/index.html
+++ b/assets/html/index.html
@@ -1,9 +1,12 @@
 <!DOCTYPE html>
 <html>
     <head>
-
+        <title>Authorize ─ Rung</title>
+        <meta charset="utf-8">
+        <link rel="stylesheet" href="https://plugin.trello.services/css/common.css?ver=3">
+        <script src="https://trello.com/power-ups/power-up.min.js"></script>
     </head>
     <body>
     </body>
-    <script type="text/javascript" src="index.js"></script>
+    <script type="text/javascript" src="index.min.js"></script>
 </html>
