--- a/assets/html/index.html
+++ b/assets/html/index.html
@@ -3,6 +3,7 @@
     <head>
         <title>Authorize ─ Rung</title>
         <meta charset="utf-8">
+        <meta name="viewport" content="initial-scale=1, maximum-scale=1">
         <link rel="stylesheet" href="https://plugin.trello.services/css/common.css?ver=3">
         <script src="https://trello.com/power-ups/power-up.min.js"></script>
     </head>
