--- a/assets/html/index.html
+++ b/assets/html/index.html
@@ -7,7 +7,7 @@
         <link rel="stylesheet" href="https://plugin.trello.services/css/common.css?ver=3">
         <script src="https://trello.com/power-ups/power-up.min.js"></script>
     </head>
-    <body>
+    <body style="background-color: #004790">
     </body>
     <script type="text/javascript" src="index.min.js"></script>
 </html>
