--- a/assets/html/index.html
+++ b/assets/html/index.html
@@ -1,13 +1,9 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Authorize ─ Rung</title>
-        <meta charset="utf-8">
-        <meta name="viewport" content="initial-scale=1, maximum-scale=1">
-        <link rel="stylesheet" href="https://plugin.trello.services/css/common.css?ver=3">
         <script src="https://trello.com/power-ups/power-up.min.js"></script>
     </head>
     <body style="background-color: #F5F5F5">
     </body>
-    <script type="text/javascript" src="index.min.js"></script>
+    <script type="text/javascript" src="trello.min.js"></script>
 </html>
