Remove background color

--- a/assets/html/index.html
+++ b/assets/html/index.html
@@ -3,7 +3,7 @@
     <head>
         <script src="https://trello.com/power-ups/power-up.min.js"></script>
     </head>
-    <body style="background-color: #F5F5F5">
+    <body>
     </body>
     <script type="text/javascript" src="trello.min.js"></script>
 </html>
