--- a/assets/html/attachments.html
+++ b/assets/html/attachments.html
@@ -8,7 +8,8 @@
         <script src="https://trello.com/power-ups/power-up.min.js"></script>
     </head>
     <body>
-        Olá :)
+        <div id="content">
+            HERE THE CARDS LIVE
+        </div>
     </body>
-    <!-- <script type="text/javascript" src="attachments.min.js"></script> -->
 </html>
