Pass session token as argument

--- a/assets/html/attachments.html
+++ b/assets/html/attachments.html
@@ -9,7 +9,7 @@
     </head>
     <body>
         <div id="content">
-            HERE THE CARDS LIVE
         </div>
     </body>
+    <script type="text/javascript" src="./attachments.min.js"></script>
 </html>
