--- a/assets/html/attachments.html
+++ b/assets/html/attachments.html
@@ -6,6 +6,18 @@
         <meta name="viewport" content="initial-scale=1, maximum-scale=1">
         <link rel="stylesheet" href="https://plugin.trello.services/css/common.css?ver=3">
         <script src="https://trello.com/power-ups/power-up.min.js"></script>
+        <style>
+        .card {
+            position: relative;
+            width: 173px;
+            height: 130px;
+            display: flex;
+            margin: 10px;
+            padding: 5px;
+            overflow-x: hidden;
+            overflow-y: scroll;
+        }
+        </style>
     </head>
     <body>
         <div id="content">
