Display flex content

--- a/assets/html/attachments.html
+++ b/assets/html/attachments.html
@@ -7,6 +7,10 @@
         <link rel="stylesheet" href="https://plugin.trello.services/css/common.css?ver=3">
         <script src="https://trello.com/power-ups/power-up.min.js"></script>
         <style>
+        #content {
+            display: flex;
+        }
+
         .card {
             position: relative;
             width: 173px;
