--- a/assets/html/attachments.html
+++ b/assets/html/attachments.html
@@ -14,9 +14,10 @@
         .card {
             position: relative;
             width: 173px;
+            border: 1px solid silver;
             height: 130px;
             display: flex;
-            margin: 10px;
+            margin: 2px;
             padding: 5px;
             overflow-x: hidden;
             overflow-y: scroll;
