--- a/assets/html/attachments.html
+++ b/assets/html/attachments.html
@@ -8,7 +8,6 @@
         <script src="https://trello.com/power-ups/power-up.min.js"></script>
         <style>
         #content {
-            display: flex;
         }
 
         .card {
@@ -16,7 +15,7 @@
             width: 173px;
             border: 1px solid silver;
             height: 130px;
-            display: flex;
+            display: inline-block;
             margin: 2px;
             padding: 5px;
             overflow-x: hidden;
