--- a/assets/html/attachments.html
+++ b/assets/html/attachments.html
@@ -18,7 +18,7 @@
             display: inline-block;
             margin: 2px;
             padding: 5px;
-            overflow-x: hidden;
+            overflow-x: auto;
             overflow-y: scroll;
         }
         </style>
