--- a/assets/html/attachments.html
+++ b/assets/html/attachments.html
@@ -7,9 +7,6 @@
         <link rel="stylesheet" href="https://plugin.trello.services/css/common.css?ver=3">
         <script src="https://trello.com/power-ups/power-up.min.js"></script>
         <style>
-        #content {
-        }
-
         .card {
             position: relative;
             width: 173px;
@@ -20,6 +17,7 @@
             padding: 5px;
             overflow-x: auto;
             overflow-y: scroll;
+            text-align: center;
         }
         </style>
     </head>
