--- a/assets/html/attachments.html
+++ b/assets/html/attachments.html
@@ -15,8 +15,8 @@
             display: inline-block;
             margin: 2px;
             padding: 5px;
-            overflow-x: auto;
-            overflow-y: scroll;
+            overflow-x: hidden;
+            overflow-y: auto;
             text-align: center;
         }
         </style>
