--- a/assets/html/attachments.html
+++ b/assets/html/attachments.html
@@ -9,14 +9,14 @@
         <style>
         .card {
             position: relative;
-            width: 173px;
+            width: 155px;
             border: 1px solid silver;
             height: 130px;
             display: inline-block;
             margin: 2px;
             padding: 5px;
             overflow-x: hidden;
-            overflow-y: auto;
+            overflow-y: hidden;
             text-align: center;
         }
         </style>
