Test Roboto font

--- a/assets/html/attachments.html
+++ b/assets/html/attachments.html
@@ -5,6 +5,7 @@
         <meta charset="utf-8">
         <meta name="viewport" content="initial-scale=1, maximum-scale=1">
         <link rel="stylesheet" href="https://plugin.trello.services/css/common.css?ver=3">
+        <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
         <script src="https://trello.com/power-ups/power-up.min.js"></script>
         <style>
         .card {
@@ -18,6 +19,7 @@
             overflow-x: hidden;
             overflow-y: hidden;
             text-align: center;
+            font-family: Roboto, sans-serif;
         }
         </style>
     </head>
