--- a/assets/html/attachments.html
+++ b/assets/html/attachments.html
@@ -5,17 +5,17 @@
         <meta charset="utf-8">
         <meta name="viewport" content="initial-scale=1, maximum-scale=1">
         <link rel="stylesheet" href="https://plugin.trello.services/css/common.css?ver=3">
-        <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Roboto:300" rel="stylesheet">
         <script src="https://trello.com/power-ups/power-up.min.js"></script>
         <style>
         .card {
             position: relative;
-            width: 155px;
+            width: 145px;
             border: 1px solid silver;
             height: 125px;
             display: inline-block;
             margin: 2px;
-            padding: 5px;
+            padding: 0 10px;
             overflow-x: hidden;
             overflow-y: hidden;
             text-align: center;
