Sorry for using let

--- a/assets/html/attachments.html
+++ b/assets/html/attachments.html
@@ -24,8 +24,7 @@
         </style>
     </head>
     <body>
-        <div id="content">
-        </div>
+        <div id="content"></div>
     </body>
     <script type="text/javascript" src="./attachments.min.js"></script>
 </html>
