--- a/assets/html/attachments.html
+++ b/assets/html/attachments.html
@@ -11,10 +11,11 @@
         .card {
             position: relative;
             width: 145px;
-            height: 125px;
+            height: 115px;
             display: inline-block;
             margin: 2px;
             padding: 0 10px;
+            padding-top: 10px;
             overflow-x: hidden;
             overflow-y: hidden;
             text-align: center;
