Display inline table

--- a/assets/html/attachments.html
+++ b/assets/html/attachments.html
@@ -12,7 +12,7 @@
             position: relative;
             width: 145px;
             height: 115px;
-            display: inline-block;
+            display: inline-table;
             margin: 2px;
             padding: 0 10px;
             padding-top: 10px;
