--- a/assets/html/attachments.html
+++ b/assets/html/attachments.html
@@ -12,8 +12,9 @@
             position: relative;
             width: 145px;
             height: 115px;
-            display: inline-table;
+            display: inline-block;
             margin: 2px;
+            border: 1px solid silver;
             padding: 0 10px;
             padding-top: 10px;
             overflow-x: hidden;
