--- a/assets/html/attachments.html
+++ b/assets/html/attachments.html
@@ -8,13 +8,17 @@
         <link href="https://fonts.googleapis.com/css?family=Roboto:300" rel="stylesheet">
         <script src="https://trello.com/power-ups/power-up.min.js"></script>
         <style>
+        #content {
+            overflow: hidden;
+        }
+
         .card {
             position: relative;
-            width: 135px;
+            width: 145px;
             height: 115px;
-            display: inline-block;
-            margin: 2px;
-            border: 1px solid silver;
+            display: inline-table;
+            margin: 1px;
+            /* border: 1px solid silver; */
             padding: 0 10px;
             padding-top: 10px;
             overflow-x: hidden;
