--- a/assets/html/attachments.html
+++ b/assets/html/attachments.html
@@ -8,17 +8,33 @@
         <link href="https://fonts.googleapis.com/css?family=Roboto:300" rel="stylesheet">
         <script src="https://trello.com/power-ups/power-up.min.js"></script>
         <style>
+        .custom-scrollbar::-webkit-scrollbar, textarea::-webkit-scrollbar {
+            width: 8px;
+            -webkit-appearance: none;
+        }
+
+        .custom-scrollbar::-webkit-scrollbar-thumb, textarea::-webkit-scrollbar-thumb {
+            background: rgba(200, 200, 200, 0.7);
+            min-height: 36px;
+            cursor: pointer;
+            color: transparent;
+        }
+
+        .custom-scrollbar::-webkit-scrollbar-thumb:hover, textarea::-webkit-scrollbar-thumb:hover {
+            background: rgba(34, 167, 250, 0.7);
+        }
+
         .card {
             position: relative;
             width: 145px;
             height: 115px;
-            display: inline-table;
+            display: inline-block;
             margin: 2px;
             border: 1px solid silver;
             padding: 0 10px;
             padding-top: 10px;
             overflow-x: hidden;
-            overflow-y: hidden;
+            overflow-y: auto;
             text-align: center;
             font-family: Roboto, sans-serif;
         }
