--- a/assets/html/attachments.html
+++ b/assets/html/attachments.html
@@ -24,6 +24,10 @@
             background: rgba(34, 167, 250, 0.7);
         }
 
+        a {
+            text-decoration: none;
+        }
+
         .card {
             position: relative;
             width: 145px;
