--- a/assets/html/attachments.html
+++ b/assets/html/attachments.html
@@ -42,6 +42,13 @@
             text-align: center;
             font-family: Roboto, sans-serif;
         }
+
+        .nothing {
+            font-size: 22px;
+            text-align: center;
+            padding: 40px 20px;
+            color: #333333;
+        }
         </style>
     </head>
     <body>
